[Extensions/Bookmarks]: Do not attempt to set URL of a folder.

Bug: 818395
Change-Id: I794bd2ebabceab3724ca6e2ff6f9b93578f1cf84
Reviewed-on: https://chromium-review.googlesource.com/957976
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542425}
Former-commit-id: 75b56e53721c0ee6ee1f1854ad6ee4449540e4de