chrome/browser/extensions/api/bookmarks/bookmark_api_constants.cc
@@ -22,6 +22,7 @@ const char kModifySpecialError[] = "Can't modify the root bookmark folders.";
 const char kEditBookmarksDisabled[] = "Bookmark editing is disabled.";
 const char kModifyManagedError[] = "Can't modify managed bookmarks.";
 const char kInvalidParamError[] = "Parameter 'key' is invalid.";
+const char kCannotSetUrlOfFolderError[] = "Can't set URL of a bookmark folder.";
 
 }  // namespace bookmark_api_constants
 }  // namespace extensions
